Got some nice configs from Pivotal

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,2 +1,15 @@
+# Act like Vim
+set-window-option -g mode-keys vi
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
 # improve colors
 set -g default-terminal 'screen-256color'
+
+# Allows for faster key repetition
+set -s escape-time 0
+
+# Highlight active window
+set-window-option -g window-status-current-bg red
