--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -8,8 +8,17 @@ bind-key l select-pane -R
 # improve colors
 set -g default-terminal 'screen-256color'
 
+# Enable mouse support (works in iTerm)
+set-window-option -g mode-mouse on
+set-option -g mouse-select-pane on
+set-option -g mouse-resize-pane on
+set-option -g mouse-select-window on
+
 # Allows for faster key repetition
 set -s escape-time 0
 
 # Highlight active window
 set-window-option -g window-status-current-bg red
+
+# use C-b v to paste the tmux buffer
+bind v paste-buffer
