Some changed configs

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -18,3 +18,7 @@
 	fontdiff = Source Code Pro,11,-1,5,50,0,0,0,0,0
 [include]
   path = ~/.gitconfig.local
+[branch]
+	autosetuprebase = always
+[pull]
+	rebase = true
