--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -9,10 +9,7 @@ bind-key l select-pane -R
 set -g default-terminal 'screen-256color'
 
 # Enable mouse support (works in iTerm)
-set-window-option -g mode-mouse on
-set-option -g mouse-select-pane on
-set-option -g mouse-resize-pane on
-set-option -g mouse-select-window on
+set -g mouse on
 
 # Allows for faster key repetition
 set -s escape-time 0
