--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "home/.vim/bundle/Vundle.vim"]
 	path = home/.vim/bundle/Vundle.vim
 	url = https://github.com/gmarik/Vundle.vim.git
-[submodule "home/.config/base16-shell"]
-	path = home/.config/base16-shell
-	url = https://github.com/chriskempson/base16-shell.git
 [submodule "home/.oh-my-zsh"]
 	path = home/.oh-my-zsh
 	url = https://github.com/robbyrussell/oh-my-zsh.git
 [submodule "home/.zsh-custom/plugins/zsh-syntax-highlighting"]
 	path = home/.zsh-custom/plugins/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule "home/.config/powerline/fonts"]
+	path = home/.config/powerline/fonts
+	url = https://github.com/powerline/fonts.git
