--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -31,3 +31,8 @@
 	insteadOf = https://github.com/
 [http "https://gopkg.in"]
 	followRedirects = true
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
