--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "home/.config/powerline/fonts"]
 	path = home/.config/powerline/fonts
 	url = https://github.com/powerline/fonts.git
+[submodule "home/.config/diff-so-fancy"]
+	path = home/.config/diff-so-fancy
+	url = https://github.com/so-fancy/diff-so-fancy.git
