better install script

--- a/.homesickrc
+++ b/.homesickrc
@@ -10,11 +10,11 @@ GIT_USER_KEYS.each do |key|
   end
 end
 
-system("chsh -s $(which zsh)")
-system('$HOME/.config/powerline/fonts/install.sh')
+system('chsh -s $(which zsh)')
+system('./home/.config/powerline/fonts/install.sh')
 system('echo -e ":PluginInstall\n" | vim')
 system(
-  '$HOME/.vim/bundle/YouCompleteMe/install.py '\
+  './home/.vim/bundle/YouCompleteMe/install.py '\
   '--gocode-completer '\
   '--tern-completer '\
   '--racer-completer'
