--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -10,7 +10,7 @@
 	editor = vim
 	autocrlf = input
 	excludesfile = ~/.gitignore
-	pager = diff-so-fancy | less --tabs=4 -RFX
+	pager = diff-so-fancy | less -nX
 [commit]
 	template = ~/.gitmessage
 [fetch]
