Move some stuff to brew

--- a/home/Brewfile
+++ b/home/Brewfile
@@ -50,6 +50,7 @@ brew "cowsay"
 brew "crunch"
 brew "cscope"
 brew "dbus"
+brew "diff-so-fancy"
 brew "libgpg-error"
 brew "libassuan"
 brew "libgcrypt"
@@ -89,6 +90,7 @@ brew "pygobject"
 brew "pygtk"
 brew "gtk-mac-integration"
 brew "gtksourceview3"
+brew "homesick-completion"
 brew "htop"
 brew "hunspell"
 brew "imagemagick"
@@ -140,6 +142,7 @@ brew "redis", restart_service: true
 brew "rpm"
 brew "ruby"
 brew "rust"
+brew "rustup-init"
 brew "sane-backends"
 brew "scala"
 brew "shellcheck"
