--- a/home/Brewfile
+++ b/home/Brewfile
@@ -209,6 +209,7 @@ cask "slack"
 cask "sonos"
 cask "spectacle"
 cask "spotify"
+cask "sqlitebrowser"
 cask "sqlworkbenchj"
 cask "virtualbox"
 cask "vlc"
