--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "home/.zsh-custom/plugins/zsh-completions"]
 	path = home/.zsh-custom/plugins/zsh-completions
 	url = git://github.com/zsh-users/zsh-completions
+[submodule "home/.zsh-custom/plugins/zsh-histdb/zsh-histdb"]
+	path = home/.zsh-custom/plugins/zsh-histdb/zsh-histdb
+	url = git://github.com/larkery/zsh-histdb
