Lots of old updates

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -6,8 +6,9 @@ bind-key k select-pane -U
 bind-key l select-pane -R
 
 # improve colors
-set -g default-terminal 'screen-256color'
-
+#set -g default-terminal 'screen-256color'
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 # Enable mouse support (works in iTerm)
 set -g mouse on
 
@@ -19,3 +20,11 @@ set-window-option -g window-status-current-bg red
 
 # use C-b v to paste the tmux buffer
 bind v paste-buffer
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'sei40kr/tmux-airline-dracula'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
