--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "home/.vim/bundle/Vundle.vim"]
-	path = home/.vim/bundle/Vundle.vim
-	url = https://github.com/gmarik/Vundle.vim.git
 [submodule "home/.oh-my-zsh"]
 	path = home/.oh-my-zsh
 	url = https://github.com/robbyrussell/oh-my-zsh.git
@@ -19,3 +16,6 @@
 [submodule "home/.zsh-custom/plugins/zsh-histdb/zsh-histdb"]
 	path = home/.zsh-custom/plugins/zsh-histdb/zsh-histdb
 	url = git://github.com/larkery/zsh-histdb
+[submodule "home/.config/nerd-fots"]
+	path = home/.config/nerd-fots
+	url = https://github.com/ryanoasis/nerd-fonts.git
